# orchestra

./: README.md  diagnose.sh  install.sh  pyproject.toml  requirements.txt  run.sh  test.sh
assets/: orchestra.desktop.in
docs/: ARCHITECTURE.md  RESEARCH_WORKBENCH.md  SEARCH_RESULTS_EXPORT.md
orchestra/: README.md  pyproject.toml
orchestra/docs/: ARCHITECTURE.md
orchestra/phase_tracker/: __init__.py  archive.py  archive_policy.py  archive_preview.py  archive_records.py  content_extractors.py  domain.py  main_window.py  project_navigator.py  search_panel.py  state_store.py  theme.py  widgets.py  workflow.py
orchestra/tests/: test_archive.py  test_archive_preview.py  test_discovery.py  test_search_engine.py  test_workflow.py  test_workflow_alignment.py
phase_tracker/: __init__.py  __main__.py  activity_log.py  analytics.py  analytics_db.py  analytics_panel.py  archive_files.py  archive_policy.py  archive_preview.py  archive_records.py  arxiv_client.py  batch_query_dialog.py  bibtex.py  crossref_client.py  discovery.py  domain.py  main_window.py  project_navigator.py  pubmed_client.py  query_editor.py  reference_panel.py  references.py  search_engine.py  search_panel.py  search_query.py  semantic_scholar_client.py  state_store.py  theme.py  widgets.py  workflow.py  workflow_alignment.py
tests/: test_analytics.py  test_analytics_db.py  test_archive.py  test_archive_preview.py  test_arxiv_client.py  test_bibtex.py  test_reference_connectors.py  test_search_batch.py  test_search_engine.py  test_search_export.py  test_search_panel_activity.py  test_workflow.py
(+19 files in other folders)
